--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,12 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "history": "^5.1.0",
+    "mapbox": "^1.0.0-beta10",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-map-gl": "^6.1.17",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "4.0.3",
