--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
