--- a/BackEnd/addNewAppointment.json
+++ b/BackEnd/addNewAppointment.json
@@ -1,11 +1,5 @@
 [
   {
-    "id": 1,
-    "day": "Sunday",
-    "time": "8:00 AM",
-    "doctorName": "8:00 AM"
-  },
-  {
     "id": 2,
     "Clinic": "Clinic 2",
     "day": "Monday",
@@ -13,17 +7,15 @@
     "doctorName": "9:00 AM"
   },
   {
-    "id": 3,
+    "id": 5,
     "Clinic": "Clinic 1",
-    "day": "Sunday",
-    "time": "9:00 AM",
-    "doctorName": "9:00 AM"
+    "day": "Sunday"
   },
   {
     "id": 4,
-    "Clinic": "Clinic 2",
+    "Clinic": "Clinic 4",
     "day": "Monday",
-    "time": "1:00 PM",
-    "doctorName": "1:00 PM"
+    "time": "11:00 AM",
+    "doctorName": "11:00 AM"
   }
 ]
